# transitive

./: .rustfmt.toml  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  main.yaml  publish.yaml
src/: lib.rs  transitive.rs
src/fallible/: mod.rs  try_from.rs  try_into.rs
src/infallible/: from.rs  into.rs  mod.rs
src/transitive/: arg_handler.rs  arg_list_type.rs  direction.rs  direction_handler.rs  from.rs  into.rs  minimal_args.rs  mod.rs  try_from.rs  try_into.rs
src/transitive/attr/: idented.rs  mod.rs  parsed.rs
src/transitive/fallible/: mod.rs  try_from.rs  try_into.rs
src/transitive/infallible/: from.rs  into.rs  mod.rs
tests/: combined.rs  common.rs  foreign_types.rs  from.rs  from_all.rs  into.rs  into_all.rs  macros.rs  try_from.rs  try_from_all.rs  try_from_custom_err.rs  try_into.rs  try_into_all.rs  try_into_custom_err.rs
tests/compile_fail/: from_single.rs  from_single.stderr  into_single.rs  into_single.stderr  try_from_custom_err_single.rs  try_from_custom_err_single.stderr  try_from_single.rs  try_from_single.stderr  try_into_custom_err_single.rs  try_into_custom_err_single.stderr  try_into_single.rs  try_into_single.stderr
tests/it/: combined.rs  foreign_types.rs  from.rs  into.rs  main.rs  try_from.rs  try_into.rs
