[package]
name = "transitive"
version = "0.5.0"
edition = "2021"
authors = ["bobozaur"]
description = "Transitive derive macros for Rust."
license = "MIT"
repository = "https://github.com/bobozaur/transitive"
keywords = ["transitive", "macros", "rust"]
exclude = ["tests/*"]
categories = ["rust-patterns", "development-tools"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"
darling = "0.20.1"