[package]
name = "transitive"
version = "1.2.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["bobozaur"]
description = "Transitive derive macros for Rust."
license = "MIT"
repository = "https://github.com/bobozaur/transitive"
keywords = ["transitive", "macros", "rust"]
exclude = ["tests/*"]
categories = ["rust-patterns", "development-tools"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
